fixed select text overlap issue

--- a/mysite/assets/scss/base/_setup.scss
+++ b/mysite/assets/scss/base/_setup.scss
@@ -25,7 +25,17 @@ hr {
 
 select {
 	border: $standard-border;
+	cursor: pointer;
+	background: url(shape-urls-get(down-arrow-na-black)) no-repeat;
+	background-position-y: center;
+	background-size: 12px 12px;
+	background-position-x: 97%;
+
+	@include breakpoint(medium) {
+		background-position-x: 95%;
+	}
 }
+	
 
 a:not(.button):hover {
 	@include set-color(color);
