--- a/mysite/assets/scss/modules/content-grid/_main.scss
+++ b/mysite/assets/scss/modules/content-grid/_main.scss
@@ -128,6 +128,10 @@ $submit-width: 200px;
 			}
 		}
 
+		select {
+			padding-right: 30px;
+		}
+
 		&__buttons {
 			margin: 10px 0px 25px 0px;
 
